When batch creating or mass deleting virtual servers, servers like Apache and BIND are not restarted to apply the changes until the entire batch is complete.
Scripts that have a background server process (like Mongrel instances for Ruby on Rails) can now be stopped, started and restarted from the Manage Script page.
Added an option to the Edit Mailbox page to disable spam filtering for a user. Also added equivalent command-line flags to the user modify-user.pl and create-user.pl command-line scripts.
---- Changes since 3.48 ----
Updated the phpMyAdmin script installer to 2.11.2.1, Nucleus to 3.31, SugarCRM to 4.5.1g, Plans calendar to 7.9.6, WordPress to 2.3.1, WordPress MU to 1.3, Drupal to 5.3 and 4.7.8, LimeSurvey to 1.53, ZenPhoto to 1.1.2, and TikiWiki to 1.9.8.3.
Upgraded the OpenAds script installer to 2.4.1, which uses a completely different installation wizard.
Added a warning about NSCD to the configuration check page.
Logging is now enabled when setting up clamd, and the socket directory created if needed.
Added 5 and 15 minute load averages to system statistics.
Details of a virtual server's resellers are now made available to pre and post virtual server change commands in the RESELLER_ environment variables.
Reseller details can now be used in templates and email messages, with keys like RESELLER_NAME and RESELLER_EMAIL.
When a domain is renamed, generics or sender canonical maps are properly updated too.
MySQL and LDAP sources for aliases and virtual addresses for Postfix can now be used by Virtualmin, when Webmin 1.390 or newer is installed and when they are setup properly in the Postfix module. This allows Virtualmin to effectively configure a remote mail server, assuming that domain Unix users and groups are also stored in LDAP.
Current versions are shown in the script updates notification email.